--- a/tutorials/vec-0/CMakeLists.txt
+++ b/tutorials/vec-0/CMakeLists.txt
@@ -70,20 +70,22 @@ add_test(
 add_test(
   elastic_3d_rotation0
   ${MoFEM_MPI_RUN} ${MPI_RUN_FLAGS} -np 1
-  ${CMAKE_CURRENT_BINARY_DIR}/elastic_3d_petsc
-  -file_name LShape_Rot_D0.cub -order 2
-  -ksp_rtol 1e-12 -ksp_atol 1e-12 -test -log_no_color -pc_type lu)
+  ${CMAKE_CURRENT_BINARY_DIR}/elastic_3d
+  -file_name LShape_Rot_D0.cub -order 4
+  -ksp_rtol 1e-12 -ksp_atol 1e-12 -test -log_no_color)
 
 add_test(
   elastic_3d_rotation_blockset
   ${MoFEM_MPI_RUN} ${MPI_RUN_FLAGS} -np 1
-  ${CMAKE_CURRENT_BINARY_DIR}/elastic_3d_petsc
-  -file_name LShape_Rot_D1.cub -order 2
-  -ksp_rtol 1e-12 -ksp_atol 1e-12 -test -log_no_color -pc_type lu)
+  ${CMAKE_CURRENT_BINARY_DIR}/elastic_3d
+  -file_name LShape_Rot_D1.cub -order 4
+  -fieldsplit_1_pc_type cg -fieldsplit_1_pc_type lu 
+  -ksp_rtol 1e-12 -ksp_atol 1e-12 -test -log_no_color)
 
 add_test(
   elastic_3d_dam_fluid_pressure
   ${MoFEM_MPI_RUN} ${MPI_RUN_FLAGS} -np 1
-  ${CMAKE_CURRENT_BINARY_DIR}/elastic_3d_petsc
-  -file_name dam.cub -order 2
-  -ksp_rtol 1e-12 -ksp_atol 1e-12 -test -log_no_color -pc_type lu)
+  ${CMAKE_CURRENT_BINARY_DIR}/elastic_3d
+  -file_name dam.cub -order 4
+  -fieldsplit_1_pc_type cg -fieldsplit_1_pc_type lu 
+  -ksp_rtol 1e-12 -ksp_atol 1e-12 -test -log_no_color)
