--- a/tutorials/adv-1/CMakeLists.txt
+++ b/tutorials/adv-1/CMakeLists.txt
@@ -229,6 +229,8 @@ if(IS_MFRONT_MOD)
       -atom_test 2
     )
 
+
+
     add_test(
       hertz_mfront_2d_axisymm
       ${MoFEM_MPI_RUN} ${MPI_RUN_FLAGS} -np 4
@@ -280,6 +282,41 @@ if(IS_MFRONT_MOD)
       -mi_param_10_0 1e3
       -mi_param_10_1 0.4
       -atom_test 4
+    )
+    # add_test(
+    #   wavy_hertz_mfront_3d
+    #   ${MoFEM_MPI_RUN} ${MPI_RUN_FLAGS} -np 1
+    #   contact_3d
+    #   -file_name ${CMAKE_CURRENT_BINARY_DIR}/mesh_files/hertz_3d.cub
+    #   -pc_type lu
+    #   -ts_type beuler
+    #   -ts_max_time 1 -ts_dt 1
+    #   -sdf_file ./sdf_files/sdf_hertz_3d.py
+    #   -use_mfront 1
+    #   -mi_lib_path_10 ${CMAKE_CURRENT_BINARY_DIR}/src/libBehaviour.${DEFAULT_LIB_EXTENSION}
+    #   -mi_block_10 LinearElasticity
+    #   -mi_param_10_0 1e3
+    #   -mi_param_10_1 0.4
+    #   # -atom_test 4
+    # )
+
+    add_test(
+      wavy_mfront_2d
+      ${MoFEM_MPI_RUN} ${MPI_RUN_FLAGS} -np 1
+      contact_2d
+      -file_name ${CMAKE_CURRENT_BINARY_DIR}/mesh_files/wavy_2d.cub
+      -pc_type lu
+      -ts_type beuler
+      -ts_max_time 1 -ts_dt 1
+      -sdf_file ./sdf_files/sdf_wavy_2d.py
+      -use_mfront 0
+      -is_axisymmetric 0
+      # -mi_lib_path_10 ${CMAKE_CURRENT_BINARY_DIR}/src/libBehaviour.${DEFAULT_LIB_EXTENSION}
+      # -mi_block_10 LinearElasticity
+      # -mi_param_10_0 1e3
+      # -mi_param_10_1 0.4
+      -snes_fd
+      # -atom_test 2
     )
 
   endif(TFEL_DIR)
