renamed file names plane to half space

--- a/tutorials/adv-1/CMakeLists.txt
+++ b/tutorials/adv-1/CMakeLists.txt
@@ -322,7 +322,7 @@ if(IS_MFRONT_MOD)
       wavy_mfront_plane_2d
       ${MoFEM_MPI_RUN} ${MPI_RUN_FLAGS} -np 4
       contact_2d
-      -file_name ${CMAKE_CURRENT_BINARY_DIR}/mesh_files/plane_2d_4p.h5m
+      -file_name ${CMAKE_CURRENT_BINARY_DIR}/mesh_files/half_space_2d_4p.h5m
       -pc_type lu
       -ts_type beuler
       -ts_max_time 1 -ts_dt 1
