--- a/tutorials/adv-1/CMakeLists.txt
+++ b/tutorials/adv-1/CMakeLists.txt
@@ -212,9 +212,6 @@ add_test(
   -atom_test 7
 )
 
-
-
-
 if(IS_MFRONT_MOD)
   if(TFEL_DIR)
     message("TFEL DIR FOUND")
@@ -270,9 +267,9 @@ if(IS_MFRONT_MOD)
 
     add_test(
       hertz_mfront_2d_axisymm_flat
-      ${MoFEM_MPI_RUN} ${MPI_RUN_FLAGS} -np 1
+      ${MoFEM_MPI_RUN} ${MPI_RUN_FLAGS} -np 4
       contact_2d
-      -file_name ${CMAKE_CURRENT_BINARY_DIR}/mesh_files/hertz_2d.cub
+      -file_name ${CMAKE_CURRENT_BINARY_DIR}/mesh_files/hertz_2d_4p.h5m
       -pc_type lu
       -ts_type beuler
       -ts_max_time 1 -ts_dt 1 
@@ -338,6 +335,7 @@ if(IS_MFRONT_MOD)
       -mi_param_10_1 0.4
       -atom_test 6
     )
+
     add_test(
       hertz_mfront_3d_schur
       ${MoFEM_MPI_RUN} ${MPI_RUN_FLAGS} -np 4
@@ -355,25 +353,12 @@ if(IS_MFRONT_MOD)
       -atom_test 3
     )
 
-    add_test(
-      wavy_3d_htet
-      ${MoFEM_MPI_RUN} ${MPI_RUN_FLAGS} -np 4
-      contact_3d
-      -file_name ${CMAKE_CURRENT_BINARY_DIR}/mesh_files/wavy_3d_htet_4p.h5m
-      -pc_type lu
-      -ts_type beuler
-      -ts_max_time 1 -ts_dt 1
-      -sdf_file ./sdf_files/sdf_plane_3d.py
-      -young_modulus 1e3
-      -poisson_ratio 0.4
-      -atom_test 7
-    )
 
     add_test(
-      wavy_3d_mfront_hex
+      wavy_3d_mfront #hex
       ${MoFEM_MPI_RUN} ${MPI_RUN_FLAGS} -np 4
       contact_3d
-      -file_name ${CMAKE_CURRENT_BINARY_DIR}/mesh_files/wavy_3d_hex_4p.h5m
+      -file_name ${CMAKE_CURRENT_BINARY_DIR}/mesh_files/wavy_3d_4p.h5m
       -base demkowicz
       -pc_type lu
       -ts_type beuler
@@ -382,23 +367,10 @@ if(IS_MFRONT_MOD)
       -use_mfront 1
       -is_axisymmetric 0
       -mi_lib_path_10 ${CMAKE_CURRENT_BINARY_DIR}/src/libBehaviour.${DEFAULT_LIB_EXTENSION}
-      -mi_block_10 LinearElasticity     
+      -mi_block_10 LinearElasticity
       -mi_param_10_0 1e3
       -mi_param_10_1 0.4
       -atom_test 7
-    )
-    add_test(
-      hertz_3d_test
-      ${MoFEM_MPI_RUN} ${MPI_RUN_FLAGS} -np 4
-      contact_3d
-      -file_name ${CMAKE_CURRENT_BINARY_DIR}/mesh_files/hertz_3d_test_4p.h5m
-      -pc_type lu
-      -ts_type beuler
-      -ts_max_time 1 -ts_dt 1
-      -sdf_file ./sdf_files/sdf_hertz_3d.py
-      -young_modulus 1e3
-      -poisson_ratio 0.4
-      -atom_test 3
     )
 
   endif(TFEL_DIR)
