--- a/Dockerfile-spack-mofem
+++ b/Dockerfile-spack-mofem
@@ -5,10 +5,10 @@ LABEL maintainer="Lukasz.Kaczmarczyk@glasgow.ac.uk"
 ENV MOFEM_BRANCH=develop
 
 RUN cd $MOFEM_INSTALL_DIR/ && \
-  git clone -b $MOFEM_BRANCH https://bitbucket.org/mofem/mofem-cephas.git && \
-  git clone -b $MOFEM_BRANCH https://bitbucket.org/mofem/users-modules-cephas.git mofem-cephas/mofem/users_modules && \
-  git clone -b $MOFEM_BRANCH https://bitbucket.org/mofem/um_eshelbian_plasticity.git mofem-cephas/mofem/users_modules/eshelbian_plasticity && \
-  git clone -b $MOFEM_BRANCH https://bitbucket.org/mofem/mfront_interface.git mofem-cephas/mofem/users_modules/mfront_interface
+  git clone -b lukasz/nested_schur https://bitbucket.org/mofem/mofem-cephas.git && \
+  git clone -b lukasz/nested_schur https://bitbucket.org/mofem/users-modules-cephas.git mofem-cephas/mofem/users_modules && \
+  git clone -b lukasz/nested_schur https://bitbucket.org/mofem/um_eshelbian_plasticity.git mofem-cephas/mofem/users_modules/eshelbian_plasticity && \
+  git clone -b develop https://bitbucket.org/mofem/mfront_interface.git mofem-cephas/mofem/users_modules/mfront_interface
 
 ENV MOFEM_ENV_FILE=/etc/profile.d/mofem.sh
 
@@ -24,14 +24,21 @@ RUN . $SPACK_ROOT_DIR/share/spack/setup-env.sh && \
   cd $MOFEM_INSTALL_DIR/core-build-Release-$MOFEM_CEPHAS_HASH && make clean && \
   touch $MOFEM_ENV_FILE && \
   echo ". $SPACK_ROOT_DIR/share/spack/setup-env.sh" >> $MOFEM_ENV_FILE && \
-  echo "export MOFEM_CEPHAS_HASH=$MOFEM_CEPHAS_HASH" >> $MOFEM_ENV_FILE && \
+  echo "export MOFEM_CEPHAS_HASH=$MOFEM_CEPHAS_HASH" >> $MOFEM_ENV_FILE 
+
+RUN . $SPACK_ROOT_DIR/share/spack/setup-env.sh && \
   export TFEL_LIB=$(spack find -p tfel | grep tfel | awk '{print $2 "/lib"}') && \
-  echo "export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$TFEL_LIB" >> $MOFEM_ENV_FILE
+  echo "export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$TFEL_LIB" >> $MOFEM_ENV_FILE 
+
+  # Add MGIS to the ENV
+RUN . $SPACK_ROOT_DIR/share/spack/setup-env.sh && \
+    echo "#Load MGIS ENV" >> etc/bash.bashrc \
+    spack load -sh mgis >> etc/bash.bashrc
 
 # Install users mdoules
 RUN . $MOFEM_ENV_FILE && \
+  spack load tfel mgis && \
   spack dev-build -j6 \
-  --test root  \
   --source-path $MOFEM_UM_SRC_DIR \
   mofem-users-modules@lukasz+docker build_type=Release \
   ^mofem-cephas@lukasz+adol-c~copy_user_modules+docker~ipo+med~shared+slepc+tetgen build_system=cmake build_type=Release dev_path=/mofem_install/mofem-cephas install_id=0 \
@@ -43,10 +50,7 @@ RUN . $MOFEM_ENV_FILE && \
   echo "export PATH=$MOFEM_INSTALL_DIR/um_view/bin:$PATH" >> $MOFEM_ENV_FILE && \
   chmod -R aug+rX `spack find -p mofem-users-modules | grep mofem-users-modules@lukasz | awk '{print $2}'`
   
-# Add MGIS to the ENV
-RUN . $SPACK_ROOT_DIR/share/spack/setup-env.sh && \
-    echo "#Load MGIS ENV" >> etc/bash.bashrc \
-    spack load -sh mgis >> etc/bash.bashrc
+
 
 WORKDIR $MOFEM_INSTALL_DIR
 
