fixes for numpy and scipy

--- a/Dockerfile-spack-env
+++ b/Dockerfile-spack-env
@@ -73,7 +73,8 @@ RUN . $SPACK_ROOT_DIR/share/spack/setup-env.sh && \
     echo ". $SPACK_ROOT_DIR/share/spack/setup-env.sh" >> /etc/bash.bashrc && \
     spack external find && \
     spack install --only dependencies mofem-cephas@lukasz+mgis \
-    target=$TARGET build_type=Release ^petsc+X ^boost+python+numpy
+    target=$TARGET build_type=Release ^petsc+X ^boost+python+numpy && \
+    spack install py-scipy
 
 # image run hook: the -l will make sure /etc/profile environments are loaded
 CMD        /bin/bash -l
